<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, RemoteSyncActivity!</string>
    <string name="app_name">RemoteSync</string>
    <string name="ip_prompt">Media Host</string>
    <string name="port_prompt">Port</string>
    <string name="connect_btn">Establish Connection</string>
    <string name="disconnect_btn">Disconnect</string>
    <string name="select_local">Select local path or file:</string>
    <string name="view_serv">View Server</string>
    <string name="upload_menu">Upload File</string>
    <string name="select_remote">Select remote path or file:</string>
    <string name="viewlocal">View Local</string>
    <string name="downloadmenu">Download</string>

</resources>