<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/editIPText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ip_prompt"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editPortText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/port_prompt"
        android:inputType="number" />

    <Button
        android:id="@+id/btnConnect"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:text="@string/connect_btn" />

</LinearLayout>