<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/remotelblInstruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_remote"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/remotepathLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:onClick="onClickRemoteBrowser"                
        android:clickable="true"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ListView
        android:id="@+id/remotedirectoryView"
        android:layout_width="match_parent"
        android:layout_height="338dp" >
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnViewLocal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/viewlocal" />

        <Button
            android:id="@+id/btnDisconnect"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/disconnect_btn" />

    </LinearLayout>

</LinearLayout>